fail_crate/tests/wrong_type_after_no_prefix.rs
use inew::New;

#[derive(New)]
#[new(no_prefix = "true")]
enum A {}

fn main() {}
